--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Pretty Flappy Bird</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" charset="UTF-8"></script>
+    <script src="app.js"></script>
 </head>
 <body>
-    <div class="game_container">
+    <div class="game-container">
         <div class="sky">
             <div class="bird">
             </div>
