--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <div class="border-right"></div>
     <div class="game-container">
+        <div class="border-top"></div>
         <div class="sky">
-            <div class="bird">
-            </div>
+            <div class="bird"></div>
         </div>
-        <div class="ground">
-        </div>
+        <div class="ground"></div>
+        <div class="border-bottom"></div>
     </div>
 </body>
 </html>
